<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_create_recipe"
        style="@style/ToolbarStyle" />

    <com.axiom.cookmate.ObservableScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <EditText
                        android:id="@+id/title_edit_text"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/a11y_add_a_title"
                        android:hint="@string/title_text_hint" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <FrameLayout
                android:id="@+id/add_image_layout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:background="@color/colorBackground">

                <ImageView
                    android:id="@+id/create_recipe_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/a11y_your_dish_image" />

                <ImageButton
                    android:id="@+id/add_recipe_pic_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:contentDescription="@string/a11y_add_a_image"
                    android:src="@drawable/ic_menu_camera" />
            </FrameLayout>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:elevation="4dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/create_ingredients_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/ingredients_heading"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/create_ingredient_list_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/create_ingredient_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/create_edit_text_ingredient"
                                style="@style/EditTextStyle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="16dp"
                                android:layout_weight="1"
                                android:hint="@string/ingredient_name_hint"
                                android:inputType="text" />

                            <ImageView
                                android:id="@+id/add_ingredient_button"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:clickable="true"
                                android:contentDescription="@string/a11y_add_ingredient_button"
                                android:src="@drawable/ic_add_button" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:elevation="4dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/create_instructions_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/instructions_heading"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/create_instruction_list_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/create_instructions_text_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/create_edit_text_instruction"
                                style="@style/EditTextStyle"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="16dp"
                                android:layout_weight="1"
                                android:hint="@string/instruction_step1" />

                            <ImageView
                                android:id="@+id/add_instruction_button"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:clickable="true"
                                android:contentDescription="@string/a11y_add_instruction_button"
                                android:src="@drawable/ic_add_button" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </com.axiom.cookmate.ObservableScrollView>
</LinearLayout>