<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginBottom="30dp"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="20dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:id="@+id/photo_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/detail_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:transitionName="recipeImage"
                    app:layout_collapseMode="parallax" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/list_item_gradient" />
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:titleTextColor="@android:color/white"
                app:layout_scrollFlags="scroll|exitUntilCollapsed" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <com.axiom.cookmate.ObservableScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:elevation="4dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_ingredient_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingEnd="32dp"
                        android:paddingStart="32dp"
                        android:paddingTop="16dp"
                        android:text="@string/ingredients_heading"
                        android:textColor="@color/colorBackground"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/my_ingredient_list_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:elevation="4dp"
                android:paddingBottom="16dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_instruction_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingEnd="32dp"
                        android:paddingStart="32dp"
                        android:paddingTop="16dp"
                        android:text="@string/instructions_heading"
                        android:textColor="@color/colorBackground"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/my_instruction_list_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </com.axiom.cookmate.ObservableScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/delete"
        android:layout_width="@dimen/fab_width"
        android:layout_height="@dimen/fab_width"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="10dp"
        android:src="@drawable/delete_icon"
        app:backgroundTint="@color/colorBackground"
        app:layout_anchor="@id/collapsing_toolbar"
        android:contentDescription="@string/a11y_delete_fab"
        app:layout_anchorGravity="bottom|right" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share"
        android:layout_width="@dimen/fab_width"
        android:layout_height="@dimen/fab_width"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="80dp"
        android:src="@drawable/ic_menu_share"
        app:backgroundTint="@color/colorBackground"
        app:layout_anchor="@id/delete"
        android:contentDescription="@string/a11y_share_fab"
        app:layout_anchorGravity="left|center" />

</android.support.design.widget.CoordinatorLayout>